[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycord"
authors = [{ name = "Alessio Sanfratello", email = "sanfra90@gmail.com" }]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.5"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "imageio-ffmpeg>=0.4.2",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]


[project.urls]
Home = "https://github.com/alesanfra/pycord"
